fixed quiz from database, but with visible html answer input value

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -46,3 +46,19 @@ input[type="radio"]{
 	margin:0 12px 0 0;
 
 }
+.resultImg{
+	width:300px;
+	margin:0 auto;
+}
+#coinDisplayContainer{
+	display:inline-block;
+	font-weight: bold;
+	color: #f9b009;
+}
+#coinDisplay{
+	display:inline-block;
+	vertical-align:middle;
+	margin:0 6px;
+	position:relative;
+	right:6px;
+}
